package common;

/**
 * Les 8 directions d'un agent.
 */
public enum Direction {

    N,
    NO,
    O,
    SO,
    S,
    SE,
    E,
    NE

}
