package plateau;

public interface IAgentite {
}
