package plateau;

public interface IEntitePlateau {
}
